--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "remi_dev",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,13 +12,28 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "firebase": "^11.7.1",
     "firebase-admin": "^13.3.0",
+    "framer-motion": "^12.11.0",
+    "history": "^5.3.0",
+    "moment": "^2.30.1",
     "node-cron": "^4.0.3",
     "react": "^19.1.0",
+    "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.3.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^5.3.4",
+    "react-router-redux": "^4.0.8",
+    "react-toggle-button": "^2.2.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "tailwindcss": "^4.1.6",
     "web-push": "^3.6.7"
   },
