minor  package changes

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ dist
 dist-ssr
 *.local
 .env
-.serviceAccountKey.json
+serviceAccountKey.json
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
