--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^5.3.4",
     "react-router-redux": "^4.0.8",
+    "react-speech-recognition": "^4.0.1",
+    "react-text-to-speech": "^2.0.2",
     "react-toggle-button": "^2.2.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
