--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase-admin": "^13.3.0",
     "framer-motion": "^12.11.0",
     "history": "^5.3.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.43.1",
     "moment": "^2.30.1",
     "node-cron": "^4.0.3",
     "react": "^19.1.0",
@@ -38,7 +39,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "tailwindcss": "^4.1.6",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "web-speech-cognitive-services": "^8.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
